samples/_failures_safe/1761338865_464014_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6653a51a.c: In function ‘main’:
./samples/SAFE/__tmp_6653a51a.c:144:12: error: missing terminating " character
  144 |     printf("\nDecompressed data
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6653a51a.c:144:5: error: expected expression at end of input
  144 |     printf("\nDecompressed data
      |     ^~~~~~
./samples/SAFE/__tmp_6653a51a.c:144:5: error: expected declaration or statement at end of input
